# ob

./: .gitignore  .yml  Cargo.toml  README.md  blog-config.json  index.html  rss.xml  template.html
.github/workflows/: quickstart.yml
docs/: .gitignore  .prettierignore  README.md  blog.json  index.html  rss.xml  template.html
docs/blog/: .config.json  08481955680708.html  18937858132263.html  45100361942221.html  47454028380105.html  66525609837342.html  96240686302273.html
docs/blog/drafts/: README.md
docs/files/css/: fonts.sass  grid.sass  languages.sass  stylesheet.css  stylesheet.sass
src/: main.rs
website/: README.md  index.html  rss.xml
